# mtoc

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  install.sh
.github/: dependabot.yml
.github/workflows/: auto_merge.yml  build.yml  coverage.yml  dependabot_automerge.yml  release.yml  test.yml
docs/: README.md  test.md  todo.md
src/: cli.rs  delete.rs  main.rs  read.rs  utils.rs  write.rs
