[package]
name = "mtoc"
version = "0.1.1"
edition = "2021"
authors = ["containerscrew info@containerscrew.com"]
repository = "https://github.com/containerscrew/mtoc"
rust-version = "1.80.1"
license-file = "LICENSE"
description = "Generate a table of contents for markdown files"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
tempfile = "3.12.0"
colored = "2.1.0"
walkdir = "2.5.0"
