[package]
name = "mtoc"
version = "0.5.0"
edition = "2021"
authors = ["containerscrew info@containerscrew.com"]
repository = "https://github.com/containerscrew/mtoc"
rust-version = "1.80.1"
license-file = "LICENSE"
description = "Generate a table of contents for markdown files"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tempfile = "3.24.0"
colored = "3.0.0"
walkdir = "2.5.0"
regex = "1.11.3"
